--- a/flowsint-app/src/styles.css
+++ b/flowsint-app/src/styles.css
@@ -4,6 +4,18 @@
 
 @custom-variant dark (&:is(.dark *));
 
+/* Disable text cursor on non-input elements */
+* {
+  caret-color: transparent;
+}
+
+input,
+textarea,
+[contenteditable="true"],
+[role="textbox"] {
+  caret-color: auto;
+}
+
 /* Container Queries */
 @container (min-width: 640px) {
   .cq-sm\:grid-cols-2 {
